2 December 2011: Wouter
	- configure generated with autoconf 2.68.

30 November 2011: Wouter
	- Fix for tcp-upstream and ssl-upstream for if a laptop sleeps, causes
	  SERVFAILs.  Also fixed for UDP (but less likely).

28 November 2011: Wouter
	- Fix quartile time estimate, it was too low, (thanks Jan Komissar).
	- iana ports updated.

11 November 2011: Wouter
	- Makefile compat with SunOS make, BSD make and GNU make.
	- iana ports updated.

10 November 2011: Wouter
	- Makefile changed for BSD make compatibility.

9 November 2011: Wouter
	- added unit test for SSL service and SSL-upstream.

8 November 2011: Wouter
	- can configure ssl service to one port number, and not on others.
	- fixup windows compile with ssl support.
	- Fix double free in unbound-host, reported by Steve Grubb.
	- iana portlist updated.

1 November 2011: Wouter
	- dns over ssl support as a client, ssl-upstream yes turns it on.
	  It performs an SSL transaction for every DNS query (250 msec).
	- documentation for new options: ssl-upstream, ssl-service-key and
	  ssl-service.pem.
	- iana portlist updated.
	- fix -flto detection on Lion for llvm-gcc.

31 October 2011: Wouter
	- dns over ssl support, ssl-service-pem and ssl-service-key files
	  can be given and then TCP queries are serviced wrapped in SSL.

27 October 2011: Wouter
	- lame-ttl and lame-size options no longer exist, it is integrated
	  with the host info.  They are ignored (with verbose warning) if
	  encountered to keep the config file backwards compatible.
	- fix iana-update for changing gzip compression of results.
	- fix export-all-symbols on OSX.

26 October 2011: Wouter
	- iana portlist updated.
	- Infra cache stores information about ping and lameness per IP, zone.
	  This fixes bug #416.
	- fix iana_update target for gzipped file on iana site.

24 October 2011: Wouter
	- Fix resolve of partners.extranet.microsoft.com with a fix for the
	  server selection for choosing out of a (particular) list of bad
	  choices. (bug#415)