@@ -1,3 +1,6 @@
+5 December 2011: Wouter
+	- Fix getaddrinfowithincludes on windows with fedora16 mingw32-gcc.
+
 2 December 2011: Wouter
 	- configure generated with autoconf 2.68.
 
